Code fixes: compilation + runtime compatibility for Java 21
- Thymeleaf 2→3 migration: ~50 processor files updated
  - AbstractAttrProcessor → AbstractAttributeTagProcessor
  - AbstractAttributeModifierAttrProcessor → AbstractAttributeTagProcessor
  - AbstractElementProcessor → AbstractElementTagProcessor
  - AbstractLocalVariableDefinitionElementProcessor → AbstractElementTagProcessor
  - AbstractFragmentHandlingElementProcessor → AbstractElementTagProcessor
  - Arguments/Element → ITemplateContext/IProcessableElementTag
  - ProcessorResult removed, use void + IElementTagStructureHandler
  - Macro/Node DOM manipulation → structureHandler.replaceWith()
  - Expression parsing API updated for Thymeleaf 3
  - IResourceResolver removed, TemplateResolver → AbstractConfigurableTemplateResolver
- Hibernate 5 migration:
  - EntityManager.getSession() → EntityManager.unwrap(Session.class)
  - Configuration.getClassMapping() → Metadata.getEntityBinding()
  - TableGenerator API signature changes
  - FlushMode enum changes
  - Removed org.hibernate.ejb package references
- Spring 5 migration:
  - WebRequest.SCOPE_GLOBAL_SESSION → SCOPE_SESSION
  - SaltSource removed from security
  - GrantedAuthorityImpl → SimpleGrantedAuthority
  - TokenBasedRememberMeServices constructor changes
  - ApplicationEventMulticaster signature changes
- Servlet 3.1 abstract method implementations
- javax.persistence.Index → org.hibernate.annotations.Index disambiguation
- Deprecated API replacements (new Integer/Long → valueOf)